feat: run local stack with postgres and nginx
